# math

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-exploration.ipynb  TOPSIS法.ipynb  基础语法.ipynb  层次分析法.ipynb  模糊综合评价.ipynb  灰色关联分析.ipynb  熵权法.ipynb
src/: P1429.cpp  __init__.py  ahp.py  data.py  models.py
src/algorithms/: ahp.py  entropy_weight.py  fuzzy_comprehensive_evaluation.py  grey_relational_analysis.py  topsis.py
src/io/: data.py  matrix_io.py
src/utils/: __init__.py  matrix.py  plot.py
tests/: __init__.py  test_ahp.py  test_entropy_weight.py  test_fuzzy_comprehensive_evaluation.py  test_grey_relational_analysis.py  test_matrix_io.py  test_plot.py  test_topsis.py  test_utils_matrix.py
